--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /captures
 .idea/vcs.xml
 .idea/misc.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/runConfigurations.xml
+.idea/encodings.xml
+.idea/gradle.xml
+.idea/modules.xml
